<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context=".ui.walker.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_bubble_dark"
        android:layout_margin="2dp"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="@id/homeConstraintLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/DarkBubbleText"
                android:text="@string/walker_home_pending_requests"/>
            <TextView
                android:id="@+id/walker_pending_request_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBubbleText"
                android:text="0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="?colorPrimary" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/DarkBubbleText"
                android:text="@string/walker_home_accepted_requests"/>
            <TextView
                android:id="@+id/walker_accepted_request_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBubbleText"
                android:text="0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="?colorPrimary" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/DarkBubbleText"
                android:text="@string/walker_home_in_progress_requests"/>
            <TextView
                android:id="@+id/walker_started_request_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBubbleText"
                android:text="0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="?colorPrimary" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/DarkBubbleText"
                android:text="@string/walker_home_completed_requests"/>
            <TextView
                android:id="@+id/walker_completed_request_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBubbleText"
                android:text="0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="?colorPrimary" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/DarkBubbleText"
                android:text="@string/walker_home_avg_rating"/>
            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/walker_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                android:rating="2.5"
                style="@style/BoneRatingBar"/>
            <TextView
                android:id="@+id/walker_rating_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBubbleText"
                android:text="(0)"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_bubble_light"
        android:layout_margin="2dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="@id/homeConstraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/walker_setting_status"
                android:textSize="16sp" />
            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:background="#CCCCCC" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/walker_switch_status"
                android:layout_width="48dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="#CCCCCC" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/walker_setting_available"
                android:textSize="16sp" />
            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:background="#CCCCCC" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/walker_switch_availability"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>