<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.walker.HomeFragment">

    <fragment
        android:id="@+id/walker_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/walker_home_info_layout"
        app:layout_constraintBottom_toTopOf="@id/walker_settings_layout"
        tools:context=".WalkerActivity2" />

    <LinearLayout
        android:id="@+id/walker_home_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_bubble_dark"
        android:layout_margin="2dp"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="@id/homeConstraintLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/DarkBubbleText"
                android:text="@string/walker_home_pending_requests"/>
            <TextView
                android:id="@+id/walker_home_pending_requests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBubbleText"
                android:text="0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="?colorPrimary" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/DarkBubbleText"
                android:text="@string/walker_home_accepted_requests"/>
            <TextView
                android:id="@+id/walker_home_accepted_requests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBubbleText"
                android:text="0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="?colorPrimary" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/DarkBubbleText"
                android:text="@string/walker_home_in_progress_requests"/>
            <TextView
                android:id="@+id/walker_home_started_requests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBubbleText"
                android:text="0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="?colorPrimary" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/DarkBubbleText"
                android:text="@string/walker_home_completed_requests"/>
            <TextView
                android:id="@+id/walker_home_completed_requests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBubbleText"
                android:text="0"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="?colorPrimary" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/DarkBubbleText"
                android:text="@string/walker_home_avg_rating"/>
            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/walker_home_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                style="@style/BoneRatingBar"/>
            <TextView
                android:id="@+id/walker_home_review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DarkBubbleText"
                android:text="(0)"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/walker_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_bubble_dark"
        android:layout_margin="2dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="@id/homeConstraintLayout">

        <LinearLayout
            android:id="@+id/walker_settings_show_hide_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"/>
            <ImageView
                android:id="@+id/walker_settings_show_hide_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="?attr/colorPrimaryDark"
                android:src="@drawable/icon_arrow_up"/>
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/walker_settings_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/walker_setting_status"
                    style="@style/DarkBubbleText" />
                <View
                    android:layout_width="2dp"
                    android:layout_height="20dp"
                    android:background="?attr/colorPrimary" />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/walker_switch_status"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="8dp"
                android:background="?attr/colorPrimary" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/walker_setting_available"
                    style="@style/DarkBubbleText"  />
                <View
                    android:layout_width="2dp"
                    android:layout_height="20dp"
                    android:background="?attr/colorPrimary" />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/walker_switch_availability"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:enabled="false" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>